--- a/css/app.css
+++ b/css/app.css
@@ -51,10 +51,19 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#belize {
+#paris {
     background-color: #4dd0e1;
 }
 
 #barcelona {
+    background-color: #03a9f4;
+}
+#tokyo  {
     background-color: #800000;
+}
+#dubai  {
+    background-color: #d32f2f;
+}
+#rome  {
+    background-color: #388e2c;
 }
